# AVRSim

./: .gitignore  CMakeLists.txt  README.md
include/: cpu.h  memory.h
include/cpu_archs/: harvard.h  neumann.h
include/cpus/avr/: avre+.h
include/memory/: linearmemory.h
src/: main.cpp
src/cpu/arch_dummy/: harvard.cpp  neumann.cpp
src/cpu/dummy/: dummy_cpu.cpp
src/memory/linearmemory/: linearmemory.cpp
